@@ -5,7 +5,7 @@ import cn.qingweico.afr.enums.FaceVerifyType;
 import cn.qingweico.afr.model.GridFs;
 import cn.qingweico.afr.servoce.impl.UserServiceImpl;
 import cn.qingweico.afr.utils.CompareFace;
-import cn.qingweico.afr.utils.FileUtils;
+import cn.qingweico.io.FileUtils;
 import cn.qingweico.model.ApiResponse;
 import com.mongodb.client.gridfs.GridFSBucket;
 import com.mongodb.client.gridfs.GridFSFindIterable;
@@ -15,7 +15,6 @@ import org.apache.commons.lang3.StringUtils;
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.*;
-import sun.misc.BASE64Decoder;
 
 import javax.annotation.Resource;
 import java.io.ByteArrayInputStream;
@@ -24,6 +23,7 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Base64;
 
 /**
  * @author zqw
@@ -47,11 +47,11 @@ public class GridController {
      * 上传人脸信息至GridFs
      */
     @PostMapping("/uploadToGridFs")
-    public ApiResponse uploadToGridFs(@RequestBody GridFs gridFs) throws IOException {
+    public ApiResponse<String> uploadToGridFs(@RequestBody GridFs gridFs) {
         // 获得图片的base64字符串
         String file64 = gridFs.getImg64();
         // 将base64字符串转换为字符数组
-        byte[] bytes = new BASE64Decoder().decodeBuffer(file64);
+        byte[] bytes = Base64.getDecoder().decode(file64);
         // 转换为输入流
         ByteArrayInputStream inputStream = new ByteArrayInputStream(bytes);
         // 上传到gridFS中
@@ -61,9 +61,11 @@ public class GridController {
         return ApiResponse.ok(fileId);
     }
 
-    /**查看人脸信息**/
+    /**
+     * 查看人脸信息
+     **/
     @GetMapping("/readFace64InGridFS/{faceId}")
-    public ApiResponse readFace64InGridFs(@PathVariable String faceId) throws IOException {
+    public ApiResponse<String> readFace64InGridFs(@PathVariable String faceId) throws IOException {
         if (StringUtils.isBlank(faceId)) {
             return ApiResponse.error("人脸信息不存在");
         }
@@ -76,6 +78,7 @@ public class GridController {
         String base64Face = FileUtils.fileToBase64(face);
         return ApiResponse.ok(base64Face);
     }
+
     private File readGridFsByFaceId(String faceId) throws IOException {
         GridFSFindIterable gridFsFiles = gridFsBucket.find(Filters.eq("_id", new ObjectId((faceId))));
         GridFSFile gridFs = gridFsFiles.first();
@@ -83,7 +86,7 @@ public class GridController {
             return null;
         }
         String fileName = gridFs.getFilename();
-        if(Files.notExists(Paths.get(faceFilePath))) {
+        if (Files.notExists(Paths.get(faceFilePath))) {
             Files.createDirectory(Paths.get(faceFilePath));
         }
         // 获取文件流; 保存到本地或者服务器的临时目录
@@ -94,8 +97,9 @@ public class GridController {
         gridFsBucket.downloadToStream(new ObjectId(faceId), os);
         return picFile;
     }
+
     @PostMapping("/login")
-    public ApiResponse face(@RequestBody GridFs loginBody) throws IOException {
+    public ApiResponse<String> face(@RequestBody GridFs loginBody) throws IOException {
         User user = userService.findOneByUsername(loginBody.getUsername());
         if (user == null) {
             return ApiResponse.error("用户不存在");
@@ -110,10 +114,10 @@ public class GridController {
             return ApiResponse.error("用户人脸信息不存在");
         }
         // 请求文件服务, 获得人脸数据的base64数据
-        ApiResponse result = readFace64InGridFs(faceId);
+        ApiResponse<String> result = readFace64InGridFs(faceId);
         String base64Db = null;
         if (result != null) {
-            base64Db = (String) result.getData();
+            base64Db = result.getData();
         }
         // 调用阿里AI进行人脸对比识别, 判断可行度, 从而实现人脸登陆
         boolean pass = faceVerify.faceVerify(FaceVerifyType.BASE64.getVal(), base64, base64Db, 60.0f);
